Fix image stretches in ios safari

--- a/public/style.css
+++ b/public/style.css
@@ -285,7 +285,7 @@ img {
 }
 
 .image-wrapper {
-    display: flex;
+    display: block;
     cursor: pointer;
     text-decoration: none;
     background: #fff;
